[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/ghost.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/boss/sprites/final_boss.tres" type="SpriteFrames" id=2]
[ext_resource path="res://enemies/final_boss.gd" type="Script" id=6]
[ext_resource path="res://enemies/boss/CanvasLayer.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=3]
length = 4.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("AnimatedSprite:modulate:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.329412, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("AnimatedSprite:modulate:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.427451, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("AnimatedSprite:modulate:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0.333333, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2, 4 )
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "standing", "default" ]
}

[sub_resource type="Animation" id=4]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( -0.66217, -75.5481 ), Vector2( 1.69748, -76.9639 ), Vector2( -4.43771, -77.9078 ), Vector2( 5.94492, -72.7164 ), Vector2( -6.79736, -72.7165 ), Vector2( -0.66217, -75.5481 ), Vector2( 1.69748, -76.9639 ), Vector2( -4.43771, -77.9078 ), Vector2( 5.94492, -72.7164 ), Vector2( -6.79736, -72.7165 ), Vector2( -0.66217, -75.5481 ), Vector2( 1.69748, -76.9639 ), Vector2( -4.43771, -77.9078 ), Vector2( 5.94492, -72.7164 ), Vector2( -6.79736, -72.7165 ), Vector2( -6.797, -75.548 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.322851, 0.322851 ), Vector2( 0.365483, 0.292561 ), Vector2( 0.280524, 0.328532 ), Vector2( 0.260286, 0.365603 ), Vector2( 0.271077, 0.328211 ), Vector2( 0.469636, 0.327418 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.0522403 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "die" ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 237.654

[sub_resource type="CircleShape2D" id=6]
radius = 103.971

[node name="final_boss" groups=[
"boss",
] instance=ExtResource( 1 )]
z_index = 2
collision_layer = 2147483650
script = ExtResource( 6 )
health = 250

[node name="AnimatedSprite" parent="." index="0"]
modulate = Color( 0.329412, 0.427451, 0.333333, 1 )
position = Vector2( -3.25905, -121.021 )
scale = Vector2( 0.42873, 0.42873 )
frames = ExtResource( 2 )
animation = "standing"
frame = 0
speed_scale = 1.0

[node name="AnimatedSprite2" type="AnimatedSprite" parent="." index="1"]
visible = false
modulate = Color( 0.329412, 0.427451, 0.333333, 1 )
position = Vector2( -3.25905, -121.021 )
scale = Vector2( 0.42873, 0.42873 )
frames = ExtResource( 2 )
animation = "standing"
playing = true

[node name="CollisionPolygon2D" parent="." index="2"]
position = Vector2( 0.420448, -3.08951 )
scale = Vector2( 7.52683, 7.52683 )
polygon = PoolVector2Array( -0.34167, -0.483559, -0.0256782, 1.2544, 1.39629, 0.148426 )
disabled = true

[node name="Hurtbox" parent="." index="3"]
position = Vector2( 0, -75.6645 )
scale = Vector2( 5.00868, 5.04382 )

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, 0 )
disabled = true

[node name="AnimationPlayer" parent="." index="4"]
anims/Appearance = SubResource( 3 )
anims/boss_die = SubResource( 4 )

[node name="jump_hitbox" type="CollisionShape2D" parent="." index="5"]
scale = Vector2( 1, 0.5 )
shape = SubResource( 5 )
disabled = true

[node name="dash_hitbox" type="CollisionShape2D" parent="." index="6"]
scale = Vector2( 1, 0.5 )
z_index = 1
shape = SubResource( 6 )
disabled = true

[node name="CanvasLayer" parent="." index="8" instance=ExtResource( 7 )]
layer = 1

[editable path="Hurtbox"]
